--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
 		"@discordjs/voice": "^0.7.5",
 		"@prisma/client": "^3.7.0",
 		"axios": "^0.24.0",
-		"discord.js": "^13.4.0",
-		"distube": "^3.0.4",
+		"discord.js": "^13.5.0",
+		"distube": "^3.0.5",
 		"dotenv": "^10.0.0",
-		"ffmpeg-static": "^4.4.0",
+		"ffmpeg": "^0.0.4",
 		"genius-lyrics-api": "^3.2.0",
 		"libsodium-wrappers": "^0.7.9",
 		"ytdl-core": "^4.9.2"
 	},
 	"devDependencies": {
-		"@types/node": "^17.0.5",
+		"@types/node": "^17.0.6",
 		"prisma": "^3.7.0",
 		"ts-node": "^10.4.0",
 		"ts-node-dev": "^1.1.8",
